Add Full Disk Encryption support

--- a/grub.cfg
+++ b/grub.cfg
@@ -1,33 +1,48 @@
 set_prefix=(memdisk)/boot/grub
-
-insmod all_video
-insmod video_bochs
-insmod video_cirrus
-
 set pager=1
-set gfxpayload=keep
-terminal_output --append gfxterm
+terminal_input --append at_keyboard
+
+insmod gfxterm_background
+set color_normal=light-blue/black
+set color_highlight=light-red/dark-gray
+set menu_color_normal=blue/black
+set menu_color_highlight=red/light-gray
+loadfont "(cbfsdisk)/etc/iosevka_minimal.pf2"
+
 
 insmod regexp
+insmod true
+
+insmod luks
+insmod cryptodisk
+insmod gcry_rijndael
+insmod gcry_sha256
 insmod ahci
 insmod part_gpt
 insmod part_msdos
+insmod ext2
+
 insmod chain
+insmod gzio
 
-for x in (usb0,*); do
-    if [ -f "$x/grub/grub.cfg" ]; then
-        configfile $x/grub/grub.cfg
-    fi
-    if [ -f "$x/boot/grub/grub.cfg" ]; then
-        configfile $x/boot/grub/grub.cfg
-    fi
+
+for x in (*,msdos1)
+do
+    while true
+    do
+        if cryptomount $x
+        then
+            break
+        fi
+    done
 done
 
-for x in (ahci0,*); do
-    if [ -f "$x/grub/grub.cfg" ]; then
-        configfile $x/grub/grub.cfg
-    fi
-    if [ -f "$x/boot/grub/grub.cfg" ]; then
-        configfile $x/boot/grub/grub.cfg
-    fi
-done
+loadfont "(cbfsdisk)/etc/iosevka.pf2"
+if [ -f "(crypto0)/grub.cfg" ]
+then
+    configfile (crypto0)/grub.cfg
+fi
+if [ -f "(crypto0)/boot/grub.cfg" ]
+then
+    configfile (crypto0)/boot/grub.cfg
+fi
