Add Background Image and GRUB Theme

--- a/config
+++ b/config
@@ -60,6 +60,7 @@ CONFIG_NO_STAGE_CACHE=y
 # CONFIG_VENDOR_ASUS is not set
 # CONFIG_VENDOR_BIOSTAR is not set
 # CONFIG_VENDOR_BOSTENTECH is not set
+# CONFIG_VENDOR_BYTEDANCE is not set
 # CONFIG_VENDOR_CAVIUM is not set
 # CONFIG_VENDOR_CLEVO is not set
 # CONFIG_VENDOR_COMPULAB is not set
@@ -73,7 +74,9 @@ CONFIG_NO_STAGE_CACHE=y
 # CONFIG_VENDOR_GOOGLE is not set
 # CONFIG_VENDOR_HP is not set
 # CONFIG_VENDOR_IBASE is not set
+# CONFIG_VENDOR_IBM is not set
 # CONFIG_VENDOR_INTEL is not set
+# CONFIG_VENDOR_INVENTEC is not set
 # CONFIG_VENDOR_KONTRON is not set
 CONFIG_VENDOR_LENOVO=y
 # CONFIG_VENDOR_LIBRETREND is not set
@@ -130,14 +133,14 @@ CONFIG_USBDEBUG_HCD_INDEX=2
 CONFIG_BOOT_DEVICE_SPI_FLASH_BUS=0
 # CONFIG_CONSOLE_POST is not set
 CONFIG_TPM_PIRQ=0x0
+CONFIG_ECAM_MMCONF_BASE_ADDRESS=0xf0000000
+CONFIG_ECAM_MMCONF_BUS_NUMBER=64
 CONFIG_MEMLAYOUT_LD_FILE="src/arch/x86/memlayout.ld"
 CONFIG_VBOOT_SLOTS_RW_A=y
 CONFIG_DCACHE_RAM_BASE=0xfefe0000
 CONFIG_DCACHE_RAM_SIZE=0x20000
 CONFIG_C_ENV_BOOTBLOCK_SIZE=0x40000
 CONFIG_DCACHE_BSP_STACK_SIZE=0x10000
-CONFIG_ECAM_MMCONF_BASE_ADDRESS=0xf0000000
-CONFIG_ECAM_MMCONF_BUS_NUMBER=64
 CONFIG_MAX_ACPI_TABLE_SIZE_KB=144
 CONFIG_HAVE_INTEL_FIRMWARE=y
 CONFIG_MRC_SETTINGS_CACHE_SIZE=0x10000
@@ -148,11 +151,13 @@ CONFIG_IFD_BIN_PATH="3rdparty/blobs/mainboard/lenovo/x220/descriptor.bin"
 CONFIG_ME_BIN_PATH="3rdparty/blobs/mainboard/lenovo/x220/me.bin"
 CONFIG_GBE_BIN_PATH="3rdparty/blobs/mainboard/lenovo/x220/gbe.bin"
 CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x20000
+CONFIG_VBT_DATA_SIZE_KB=8
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
 CONFIG_SPI_FLASH_GIGADEVICE=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="ThinkPad X220"
 CONFIG_HAVE_IFD_BIN=y
+# CONFIG_DEBUG_SMI is not set
 # CONFIG_BOARD_LENOVO_THINKPAD_T440P is not set
 # CONFIG_BOARD_LENOVO_THINKPAD_W541 is not set
 # CONFIG_BOARD_LENOVO_L520 is not set
@@ -193,7 +198,6 @@ CONFIG_PS2K_EISAID="PNP0303"
 CONFIG_PS2M_EISAID="LEN0020"
 CONFIG_THINKPADEC_HKEY_EISAID="IBM0068"
 CONFIG_GFX_GMA_PANEL_1_PORT="LVDS"
-# CONFIG_DEBUG_SMI is not set
 CONFIG_D3COLD_SUPPORT=y
 CONFIG_PCIEXP_ASPM=y
 # CONFIG_PCIEXP_L1_SUB_STATE is not set
@@ -246,9 +250,7 @@ CONFIG_SERIRQ_CONTINUOUS_MODE=y
 CONFIG_EHCI_BAR=0xfef00000
 CONFIG_ACPI_CPU_STRING="CP%02X"
 CONFIG_STACK_SIZE=0x2000
-CONFIG_CPU_SPECIFIC_OPTIONS=y
 CONFIG_IED_REGION_SIZE=0x400000
-CONFIG_VBT_DATA_SIZE_KB=8
 CONFIG_INTEL_GMA_BCLV_OFFSET=0x48254
 CONFIG_INTEL_GMA_BCLV_WIDTH=16
 CONFIG_INTEL_GMA_BCLM_OFFSET=0xc8256
@@ -262,6 +264,7 @@ CONFIG_PCIEXP_COMMON_CLOCK=y
 CONFIG_FIXED_SMBUS_IO_BASE=0x400
 CONFIG_HPET_MIN_TICKS=0x80
 CONFIG_CBFS_CACHE_ALIGN=8
+CONFIG_DOMAIN_RESOURCE_32BIT_LIMIT=0xfe000000
 
 #
 # CPU
@@ -386,6 +389,7 @@ CONFIG_BOOTBLOCK_SIMPLE=y
 CONFIG_HAVE_CF9_RESET=y
 CONFIG_DEBUG_HW_BREAKPOINTS=y
 CONFIG_DEBUG_NULL_DEREF_BREAKPOINTS=y
+# CONFIG_DUMP_SMBIOS_TYPE17 is not set
 # end of Chipset
 
 #
@@ -429,10 +433,6 @@ CONFIG_INTEL_GMA_HAVE_VBT=y
 # CONFIG_SOFTWARE_I2C is not set
 CONFIG_I2C_TRANSFER_TIMEOUT_US=500000
 # CONFIG_RESOURCE_ALLOCATION_TOP_DOWN is not set
-CONFIG_NO_DDR5=y
-CONFIG_NO_LPDDR4=y
-CONFIG_NO_DDR4=y
-CONFIG_NO_DDR2=y
 CONFIG_USE_DDR3=y
 # end of Devices
 
@@ -443,6 +443,7 @@ CONFIG_CRB_TPM_BASE_ADDRESS=0xfed40000
 # CONFIG_ELOG is not set
 CONFIG_CACHE_MRC_SETTINGS=y
 # CONFIG_MRC_SETTINGS_PROTECT is not set
+CONFIG_MRC_CACHE_USING_MRC_VERSION=y
 # CONFIG_SMMSTORE is not set
 CONFIG_SPI_FLASH=y
 CONFIG_BOOT_DEVICE_SPI_FLASH_RW_NOMMAP=y
@@ -471,7 +472,6 @@ CONFIG_INTEL_INT15=y
 CONFIG_INTEL_GMA_ACPI=y
 CONFIG_GFX_GMA=y
 CONFIG_GFX_GMA_PANEL_1_ON_LVDS=y
-CONFIG_INTEL_GMA_OPREGION_2_0=y
 CONFIG_GFX_GMA_DYN_CPU=y
 CONFIG_GFX_GMA_GENERATION="Ironlake"
 CONFIG_GFX_GMA_PCH="Cougar_Point"
@@ -583,6 +583,7 @@ CONFIG_USE_WATCHDOG_ON_BOOT=y
 #
 CONFIG_GENERATE_SMBIOS_TABLES=y
 CONFIG_SMBIOS_PROVIDED_BY_MOBO=y
+CONFIG_BIOS_VENDOR="coreboot"
 CONFIG_MAINBOARD_SERIAL_NUMBER="123456789"
 # end of System tables
 
@@ -605,7 +606,7 @@ CONFIG_PAYLOAD_BUILD_GRUB2=y
 CONFIG_GRUB2_STABLE=y
 # CONFIG_GRUB2_MASTER is not set
 # CONFIG_GRUB2_REVISION is not set
-CONFIG_GRUB2_EXTRA_MODULES="ahci pata ata serial part_msdos part_gpt ext2 btrfs zfs xfs fat exfat procfs gzio cpio chain ls cat echo search test regexp hexdump gettext file search_fs_file search_fs_uuid search_label lsmmap lspci lsacpi pcidump setpci memdisk sleep sleep_test configfile linux syslinuxcfg all_video videoinfo video_bochs video_cirrus video_colors at_keyboard gfxmenu gfxterm_menu cbmemc halt reboot multiboot boot acpi terminal terminfo luks gcry_blowfish gcry_crc gcry_dsa gcry_rijndael gcry_rsa gcry_serpent gcry_sha1 gcry_sha256 gcry_sha512 gcry_twofish true gfxterm_background"
+CONFIG_GRUB2_EXTRA_MODULES="ahci pata ata serial part_msdos part_gpt ext2 btrfs zfs xfs fat exfat procfs gzio cpio chain ls cat echo search test regexp hexdump gettext file search_fs_file search_fs_uuid search_label lsmmap lspci lsacpi pcidump setpci memdisk sleep sleep_test configfile linux syslinuxcfg all_video videoinfo video_bochs video_cirrus video_colors at_keyboard gfxmenu gfxterm_menu cbmemc halt reboot multiboot boot acpi terminal terminfo luks gcry_blowfish gcry_crc gcry_dsa gcry_rijndael gcry_rsa gcry_serpent gcry_sha1 gcry_sha256 gcry_sha512 gcry_twofish true gfxterm_background png"
 CONFIG_GRUB2_INCLUDE_RUNTIME_CONFIG_FILE=y
 CONFIG_GRUB2_RUNTIME_CONFIG_FILE="grub.cfg"
 CONFIG_PAYLOAD_OPTIONS=""
@@ -656,6 +657,7 @@ CONFIG_HAVE_DEBUG_SMBUS=y
 # CONFIG_DEBUG_ADA_CODE is not set
 CONFIG_HAVE_EM100_SUPPORT=y
 # CONFIG_EM100 is not set
+# CONFIG_DEBUG_ACPICA_COMPATIBLE is not set
 # end of Debugging
 
 CONFIG_RAMSTAGE_ADA=y
