--- a/grub.cfg
+++ b/grub.cfg
@@ -3,11 +3,13 @@ set pager=1
 terminal_input --append at_keyboard
 
 insmod gfxterm_background
+insmod png
+background_image "(cbfsdisk)/etc/coreboot.png"
 set color_normal=light-blue/black
 set color_highlight=light-red/dark-gray
 set menu_color_normal=blue/black
 set menu_color_highlight=red/light-gray
-loadfont "(cbfsdisk)/etc/iosevka_minimal.pf2"
+loadfont "(cbfsdisk)/etc/iosevka.minimal.pf2"
 
 
 insmod regexp
